fix layout bugs

--- a/src/style/index.css
+++ b/src/style/index.css
@@ -4,19 +4,11 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto+Slab:300,300i,400,400i,500,500i,700,700i,900,900i');
 body {
   margin: 0;
-  /*font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;*/
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 button:focus {outline:0;}
-
-code {
-  /*font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;*/
-}
 
 :root {
     --dusty: #96858f; 
@@ -26,14 +18,10 @@ code {
     --purple: #716d93;
 }
 
-
 .container {
-    
     background: #f8fafc;
-    
     overflow: scroll;
 }
-
 
 .header {
     padding-top: 10px; 
@@ -91,7 +79,7 @@ code {
     background-color: white;  
     color: var(--lavendar); 
     font-family: 'Roboto Slab';
-    max-width: 1000px;
+    /*max-width: 1000px;*/
     margin-left: 10%;
     margin-right: 10%;  
 }
@@ -111,9 +99,7 @@ code {
     
 }
 
-
 .icon {
-    /*padding-left: 150px;*/
     padding-top: 10px; 
     padding-bottom: 10px;
     width: 30px;
