--- a/src/style/projects.css
+++ b/src/style/projects.css
@@ -1,6 +1,5 @@
 
 .img {
-/*    width: 200px;*/
     height: 200px;
     float: center;
     display: block;
@@ -12,7 +11,6 @@
 }
 
 .project-title {
-/*    padding-bottom: 10px;*/
     font-size: 18px;
     width: 100%;
     text-align: center;
@@ -30,11 +28,11 @@
     margin-top: 20px;
     border: 1px solid #EBECF0;
     width: 300px;
-    margin-left: 20px;
-    margin-right: auto;
+    margin: 0 auto; 
     margin-bottom: 30px;
     float: left;
     height: 240px; 
+    flex-direction: column;
 }
 
 .project-inner {
@@ -58,13 +56,10 @@
     transform: rotateY(180deg);
 }
 
-
-
 .project-links {
     transition: all 0.5s;
     cursor: pointer;
     font-weight: 600;
-/*    color: #7285A5; */
     color: #4682B4;
     text-decoration: underline;
     margin-top: 0px; 
@@ -86,9 +81,6 @@
     display: flex;
     flex-direction: row;
     margin-top: -20px;
-/*    width: 50%;*/
-/*    margin-left: auto;*/
-/*    margin-right: auto;*/
     margin-left: 10px;
     overflow: scroll;
     overflow-y: hidden;
@@ -110,20 +102,13 @@
     height: 15px; 
 }
 
-.parent:after {
-    overflow-x: auto;
-    overflow-y: hidden;
-    clear: both;
-    content: "";
-     display: table;
-     /*white-space: nowrap;
-     margin-left: auto;
-      margin-right: auto;*/
-}
-
-table {
-    table-layout: fixed; 
-    width: 100%
+.parent {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: row;
+    width: 100%;
+    flex-wrap: wrap;
 }
 
 .child{
@@ -132,3 +117,9 @@ table {
     padding: 0;
     overflow: hidden;
 }
+
+table {
+    table-layout: fixed; 
+    width: 100%
+}
+
